@@ -1,4 +1,5 @@
-stefan; 27 jun 2003 bug 488 fixed
+stefan; 27 jun 2003: bug 329 (chmod before ziping doc)  fixed
+stefan; 27 jun 2003: bug 488 (ant tagJar will not work if lib/ doesn't exist) fixed
 
 0.5.9.3; 26 jun 2003 cristi
 0.5.9 major improvements:
